@@ -7,6 +7,7 @@ Version 1.5.8, 24th April 2020
 
 New
 
+* asthma view in Conditions tab
 * 'include up-to-date' option for cancer screening
 
 Version 1.5.7, 8th April 2020
